--- a/Contrib.PinterestButtons/Contrib.PinterestButtons.csproj
+++ b/Contrib.PinterestButtons/Contrib.PinterestButtons.csproj
@@ -65,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\pinit-button-editor.js" />
+    <Content Include="Scripts\pinit.js" />
     <Content Include="Web.config" />
     <Content Include="Views\Web.config" />
     <Content Include="Scripts\Web.config" />
@@ -83,25 +84,34 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Drivers\FollowButtonPartDriver.cs" />
     <Compile Include="Drivers\PinItButtonPartDriver.cs" />
     <Compile Include="Handlers\PinItButtonHandler.cs" />
+    <Compile Include="Handlers\FollowButtonHandler.cs" />
     <Compile Include="Migrations.cs" />
-    <Compile Include="Models\PinItButton.cs" />
+    <Compile Include="Models\PinterestFollowButton.cs" />
+    <Compile Include="Models\PinterestPinItButton.cs" />
     <Compile Include="ResourceManifest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\EditorTemplates\Parts\PinItButton.cshtml" />
+    <Content Include="Views\EditorTemplates\Parts\PinterestPinItButton.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Parts\PinItButton.cshtml" />
+    <Content Include="Views\Parts\PinterestPinItButton.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Placement.info">
       <SubType>Designer</SubType>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Parts\PinterestFollowButton.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\EditorTemplates\Parts\PinterestFollowButton.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
