--- a/Contrib.PinterestButtons/Contrib.PinterestButtons.csproj
+++ b/Contrib.PinterestButtons/Contrib.PinterestButtons.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -84,13 +84,19 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Drivers\BoardViewPartDriver.cs" />
     <Compile Include="Drivers\FollowButtonPartDriver.cs" />
+    <Compile Include="Drivers\ProfileViewPartDriver.cs" />
     <Compile Include="Drivers\PinItButtonPartDriver.cs" />
+    <Compile Include="Handlers\BoardViewHandler.cs" />
     <Compile Include="Handlers\PinItButtonHandler.cs" />
     <Compile Include="Handlers\FollowButtonHandler.cs" />
-    <Compile Include="Migrations.cs" />
+    <Compile Include="Handlers\ProfileViewHandler.cs" />
+    <Compile Include="Models\PinterestBoardView.cs" />
     <Compile Include="Models\PinterestFollowButton.cs" />
     <Compile Include="Models\PinterestPinItButton.cs" />
+    <Compile Include="Models\PinterestProfileView.cs" />
+    <Compile Include="Migrations.cs" />
     <Compile Include="ResourceManifest.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -112,6 +118,18 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\EditorTemplates\Parts\PinterestFollowButton.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\EditorTemplates\Parts\PinterestBoardView.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\EditorTemplates\Parts\PinterestProfileView.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Parts\PinterestBoardView.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Parts\PinterestProfileView.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
