Including pinit.js from Pinterest

--- a/Contrib.PinterestButtons/Contrib.PinterestButtons.csproj
+++ b/Contrib.PinterestButtons/Contrib.PinterestButtons.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -65,7 +65,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\pinit-button-editor.js" />
-    <Content Include="Scripts\pinit.js" />
     <Content Include="Web.config" />
     <Content Include="Views\Web.config" />
     <Content Include="Scripts\Web.config" />
